# TrinityCore

./: .dockerignore  .env  .env.example  .gitignore  AGENT.md  AGENTS.md  Dockerfile  ELUNA_QUICK_START.md  README.md  VALIDATION_SUMMARY.md  docker-compose.yml
.github/workflows/: gcc-build.yml
araxia_docs/: ARAXIA_TODO.md  ELUNA_CONFIG_GUIDE.md  ELUNA_INTEGRATION_COMPLETE.md  docker-build.sh
araxiaonline/: .env.example  DEVELOPING.md  Dockerfile  README.md  WAYPOINT_DETAILS_IMPLEMENTATION.md  cmake_setup.sh  docker-compose.yml  install_deps.sh
araxiaonline/ams/: AMS_Server.lua
araxiaonline/ams/AMS_Client/: AMS_Client.lua
araxiaonline/araxia_docs/: DOCKER_BUILD_README.md  Dockerfile  ELUNA_RELOAD_COMMAND.md  ELUNA_RELOAD_FIX.md  ELUNA_SHARED_DATA_COMPLETE.md  ELUNA_SHARED_DATA_DESIGN.md  EVENT_BUS_DESIGN.md  GLOBAL_ELUNA_PLAN.md  MCP_SERVER.md  docker-compose.yml
araxiaonline/araxia_docs/admin_npcdata/: 00_PLAN.md  01_ELUNA_API_INVESTIGATION.md  02_PROGRESS.md  03_IMPLEMENTATION_SUMMARY.md  03_WAYPOINT_VISUALIZATION.md  04_WAYPOINT_EDITING_PLAN.md  05_WAYPOINT_DISPLAY_CONFIG.md  AMS_TESTSUITE.md  ELUNA_RELOAD_INVESTIGATION.md  TESTING_GUIDE.md
araxiaonline/araxia_docs/ams_system/: 00_OVERVIEW.md  00_START_HERE.md  01_DISCOVERY_PLAN.md  02_DISCOVERY_LOG.md  03_TECHNICAL_ARCHITECTURE.md  04_PROPOSED_SOLUTIONS.md  05_IMPLEMENTATION_LOG.md  06_AMS_DEBUGGING_SESSION.md  AIO_VS_CUSTOM_ANALYSIS.md  AMS_ALPHA_RELEASE.md  AMS_QUICKSTART.md  AMS_README.md  ELUNA_ARCHITECTURE_ANALYSIS.md  KNOWN_ISSUES.md  LESSONS_LEARNED_AMS.md  QUICK_REFERENCE.md  README.md
araxiaonline/araxia_docs/content_system/: CROSS_ENGINE.md  README.md
araxiaonline/client_addons/AMS_Client/: AMS_Client.lua  AMS_Client.toc
araxiaonline/client_addons/AraxiaTrinityAdmin/: AMSTestClient.lua  AraxiaTrinityAdmin.toc  CASCADE.md  Core.lua  MCPBridge.lua  README.md  ServerDataModule.lua
araxiaonline/lua_scripts/: AGENTS.md  README.md  Smallfolk.lua  ad_admin_handlers.lua  admin_handlers.lua  ae_mcp_bridge.lua  af_spawn_validator.lua  ams_test_handlers.lua  init.lua  mcp_bridge.lua  reload_helper.lua  spawn_validator.lua  zz_init.lua
araxiaonline/lua_scripts/AMS_Server/: AMS_Server.lua  README.md
araxiaonline/lua_scripts/ab_AMS_Server/: AMS_Server.lua  smallfolk.lua
araxiaonline/lua_scripts/instances/: README.md
araxiaonline/lua_scripts/integration_tests/: README.md  test_bindings.lua  test_core_functionality.lua  test_data_types.lua  test_events.lua  test_runner.lua
araxiaonline/server_scripts/: test_mcp_integration.py  test_mcp_player.sh
dep/: CMakeLists.txt
dep/efsw/: CMakeLists.txt
dep/zeromq/: CMakeLists.txt
src/araxiaonline/: AraxiaCore.cpp  AraxiaCore.h  CMakeLists.txt  araxia.conf.dist
src/araxiaonline/eventbus/: AraxiaEventBus.cpp  AraxiaEventBus.h  AraxiaEventBusConfig.cpp  AraxiaEventBusConfig.h  AraxiaEvents.cpp  AraxiaEvents.h  CMakeLists.txt
src/araxiaonline/game/Entities/Creature/: AraxiaCreatureWriter.cpp  AraxiaCreatureWriter.h
src/araxiaonline/mcp/: AgentTools.cpp  AraxiaMCPServer.cpp  AraxiaMCPServer.h  DatabaseTools.cpp  MCPPlayerManager.cpp  MCPPlayerManager.h  MCPPlayerTools.cpp  ServerTools.cpp  SpawnTools.cpp  WorldScan.cpp
src/araxiaonline/tools/: zmq_subscriber.py
src/common/Utilities/: EventProcessor.h
src/server/game/: CMakeLists.txt
src/server/game/AI/NpcBots/: bot_GridNotifiers.h  bot_ai.cpp  bot_ai.h  bot_archmage_ai.cpp  bot_bm_ai.cpp  bot_crypt_lord_ai.cpp  bot_dark_ranger_ai.cpp  bot_death_knight_ai.cpp  bot_dreadlord_ai.cpp  bot_druid_ai.cpp  bot_hunter_ai.cpp  bot_mage_ai.cpp  bot_necromancer_ai.cpp  bot_paladin_ai.cpp  bot_priest_ai.cpp  bot_rogue_ai.cpp  bot_sea_witch_ai.cpp  bot_shaman_ai.cpp  bot_spellbreaker_ai.cpp  bot_sphynx_ai.cpp  bot_warlock_ai.cpp  bot_warrior_ai.cpp  botspell.cpp  bpet_ai.h  bpet_archmage.cpp  bpet_crypt_lord.cpp  bpet_dark_ranger.cpp  bpet_death_knight.cpp  bpet_dreadlord.cpp  bpet_druid.cpp  bpet_hunter.cpp  bpet_mage.cpp  bpet_necromancer.cpp  bpet_priest.cpp  bpet_sea_witch.cpp  bpet_shaman.cpp  bpet_warlock.cpp
src/server/game/AI/SmartScripts/: SmartScript.cpp
src/server/game/Accounts/: RBAC.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp
src/server/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseBotSeller.cpp  AuctionHouseBotSeller.h
src/server/game/Battlegrounds/Zones/: BattlegroundAB.cpp  BattlegroundAV.cpp  BattlegroundAV.h  BattlegroundWS.cpp
src/server/game/Combat/: CombatManager.cpp  ThreatManager.cpp
src/server/game/Conditions/: ConditionMgr.cpp
src/server/game/Entities/Creature/: Creature.cpp  Creature.h  CreatureData.h
src/server/game/Entities/Item/: Item.cpp  Item.h
src/server/game/Entities/Object/: Object.cpp  Object.h
src/server/game/Entities/Player/: Player.cpp  Player.h
src/server/game/Entities/Unit/: Unit.cpp  Unit.h
src/server/game/Groups/: Group.cpp  Group.h  GroupRefManager.h  GroupReference.cpp
src/server/game/Guilds/: Guild.cpp
src/server/game/Handlers/: ChatHandler.cpp
src/server/game/Instances/: InstanceScript.cpp
src/server/game/LuaEngine/: ElunaConfig.cpp  ElunaIncludes.h  ElunaLoader.cpp  ElunaMgr.cpp  ElunaMgr.h  ElunaSharedData.cpp  ElunaSharedData.h  ElunaTemplate.h  ElunaUtility.h  LuaEngine.cpp  LuaEngine.h
src/server/game/LuaEngine/hooks/: HookHelpers.h
src/server/game/LuaEngine/methods/: Methods.cpp
src/server/game/LuaEngine/methods/CMangos/: BattleGroundMethods.h  MapMethods.h  VehicleMethods.h
src/server/game/LuaEngine/methods/TrinityCore/: CreatureMethods.h  GlobalMethods.h  MapMethods.h  PlayerMethods.h  UnitMethods.h  WorldObjectMethods.h
src/server/game/Maps/: Map.cpp  Map.h
src/server/game/Movement/Waypoints/: WaypointManager.cpp  WaypointManager.h
src/server/game/Server/: WorldSession.cpp  WorldSession.h
src/server/game/Spells/: Spell.cpp  SpellInfo.cpp  SpellInfo.h  SpellMgr.cpp
src/server/game/World/: World.cpp  World.h
src/server/scripts/: CMakeLists.txt
src/server/worldserver/: CMakeLists.txt  (+1 more)
tests/: CMakeLists.txt
tests/araxiaonline/: MCPPlayerManagerTest.cpp
(+56 files in other folders)
